--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Document</title>
   <style>
     .MyFormContainer {
-      width: 450px;
+      width: 100%;
+      max-width: 450px;
       margin-left: auto;
       margin-right: auto;
       background-color: transparent;
