--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 
     /* Creditcard number */
     .pensio_payment_form_input_cell>#creditCardNumberInput {
-      width: 424px;
+      /* width: 424px; */
+      width: 100%;
+
 
       margin: 4px 0 0 0;
       padding: 8px 12px;
