--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       width: 100%;
       max-width: 450px;
     }
+
+    #creditCardNumberInput {
+      width: 100%;
+      max-width: 450px;
+      font-size: 16;
+      padding: 2px 3px;
+    }
   </style>
 </head>
 
