--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     #creditCardNumberInput {
       width: 100%;
-      max-width: 440px !important;
+      max-width: calc(100vw - 10px) !important;
       font-size: 16;
       padding: 2px 3px;
     }
