--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
     #creditCardNumberInput {
       width: 100%;
       max-width: calc(100vw - 10px) !important;
-      font-size: 16;
+      margin-top: 8px;
       padding: 2px 3px;
+      font-size: 16;
+      line-height: 24px;
     }
   </style>
 </head>
