--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       max-width: 450px;
     }
 
-    #creditCardNumberInput {
+    #creditCardNumberInput, #cvcInput, #cardholderNameInput {
       width: 100%;
       max-width: calc(100vw - 10px) !important;
       margin-top: 8px;
