--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       font-size: 16;
       line-height: 24px;
     }
+
+    .pensio_payment_form_label_cell {
+      color: #030711;
+      font-size: 18px;
+      line-height: 28px;
+    }
   </style>
 </head>
 
