--- a/index.html
+++ b/index.html
@@ -51,9 +51,14 @@
       width: 100%;
       max-width: calc(100vw - 10px) !important;
       margin-top: 8px;
-      padding: 2px 3px;
-      font-size: 16;
+      padding: 8px 12px;
+      font-size: 16px;
       line-height: 24px;
+    }
+
+    /* Hide card helper icons and provider selector */
+    #creditCardTypeIcon, #creditCardTypeSecondIcon, #selectCardLabel {
+      display: none;
     }
 
     .pensio_payment_form_label_cell {
