--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
       line-height: 24px;
     }
 
+    #emonth {
+      width: 48%;
+      margin-top: 8px;
+      padding: 8px 12px;
+      font-size: 16px;
+      /* line-height: 24px; -- Lineheight is not sematically correct on input elements, so we rely on padding */
+    }
+
     /* Hide card helper icons and provider selector */
     #creditCardTypeIcon, #creditCardTypeSecondIcon, #selectCardLabel {
       display: none;
