--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     #pensioCreditCardPaymentSubmitButton {
       width: 100%;
-      max-width: calc(100vw - 10px);
+      max-width: 100vw;
       margin-top: 16px;
       padding: 8px 12px;
       font-size: 16px;
