--- a/index.html
+++ b/index.html
@@ -42,15 +42,13 @@
       background-color: violet;
     }
 
-    /* .pensio_payment_form_row.cardnumber_row {
-      width: 100%;
-      max-width: 450px;
-    } */
-
     .pensio_payment_form_label_cell {
       color: #030711;
       font-size: 18px;
       line-height: 28px;
+    }
+
+    .pensio_payment_form_row {
       margin-top: 24px;
     }
 
