--- a/index.html
+++ b/index.html
@@ -61,12 +61,18 @@
       line-height: 24px;
     }
 
-    #emonth {
+    #emonth, #eyear {
       width: 48%;
       margin-top: 8px;
       padding: 8px 12px;
       font-size: 16px;
       /* line-height: 24px; -- Lineheight is not sematically correct on input elements, so we rely on padding */
+
+      border-width: 1px;
+      border-color: #cbd5e1 border-radius: 6px;
+      border-style: solid;
+
+      background-color: rgb(255 255 255 / 1);
     }
 
     /* Hide card helper icons and provider selector */
