--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       padding: 8px 12px;
       font-size: 16px;
       line-height: 24px;
+
+      outline-style: solid;
+      outline-color: #030711;
+      outline-offset: 2px;
     }
 
     #emonth, #eyear {
