--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       color: #030711;
       font-size: 18px;
       line-height: 28px;
+      font-weight: 600;
     }
 
     .pensio_payment_form_row {
@@ -59,7 +60,8 @@
       padding: 8px 12px;
       font-size: 16px;
       line-height: 24px;
-
+    }
+    #creditCardNumberInput:focus, #cvcInput:focus, #cardholderNameInput:focus {
       outline-style: solid;
       outline-color: #030711;
       outline-offset: 2px;
