--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     #creditCardNumberInput:focus, #cvcInput:focus, #cardholderNameInput:focus {
       outline-style: solid;
       outline-color: #030711;
-      outline-offset: 2px;
+      outline-offset: 1px;
+      outline-width: 2px;
     }
 
     #emonth, #eyear {
