--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       max-width: 450px;
       margin-left: auto;
       margin-right: auto; */
+      padding: 4px 0px
       background-color: transparent;
       position: relative;
       font-size: 16px;
