--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
       background-color: rgb(255 255 255 / 1);
     }
 
+    #emonth:focus, #eyear:focus {
+      outline-style: solid;
+      outline-color: #030711;
+      outline-offset: 1px;
+      outline-width: 2px;
+    }
+
     /* Hide card helper icons and provider selector */
     #creditCardTypeIcon, #creditCardTypeSecondIcon, #selectCardLabel {
       display: none;
