--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
       line-height: 28px;
       font-weight: 500;
     }
+    
+    .pensio_payment_form_label_cell>#pensio_payment_form_cvc_description {
+      color: #6b7280;
+      font-size: 12px;
+      line-height: 16px;
+      font-weight: 400;
+    }
 
     .pensio_payment_form_row {
       margin-top: 16px;
