--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
     .pensio_payment_form_row {
       margin-top: 16px;
+      padding: 8px 0;
     }
 
     #creditCardNumberInput, #cvcInput, #cardholderNameInput {
