--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       max-width: 450px;
       margin-left: auto;
       margin-right: auto; */
-      padding: 4px 0px
       background-color: transparent;
       position: relative;
       font-size: 16px;
@@ -59,7 +58,7 @@
 
     .pensio_payment_form_row {
       margin-top: 16px;
-      padding: 8px 0;
+      padding: 0 8px;
     }
 
     #creditCardNumberInput, #cvcInput, #cardholderNameInput {
