--- a/index.html
+++ b/index.html
@@ -107,13 +107,14 @@
       width: 100%;
       max-width: 100vw;
       margin-top: 16px;
-      padding: 8px 12px;
+      padding: 10px 12px;
       font-size: 16px;
       line-height: 24px;
       background-color: #030711;
       color: #fff;
       border: none;
       cursor: pointer;
+      text-transform: uppercase;
     }
   </style>
 </head>
@@ -122,6 +123,7 @@
   <div class="MyFormContainer">
     <div class="CustomAltaPayCloseButton">Close</div>
     <form id="PensioPaymentForm">All content here will be replaced by the actual payment form</form>
+    <input type="button" class="CustomSubmitButton" value="Pay" />
   </div>
 </body>
 
