--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     #creditCardNumberInput:focus, #cvcInput:focus, #cardholderNameInput:focus {
       outline-style: solid;
-      outline-color: #030711;
-      outline-offset: 1px;
+      outline-color: #cbd5e1;
+      outline-offset: 0px;
       outline-width: 2px;
     }
 
