--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       padding: 8px 12px;
       font-size: 16px;
       line-height: 24px;
+      border: #9ca3af 1px solid;
     }
 
     #creditCardNumberInput:focus, #cvcInput:focus, #cardholderNameInput:focus {
@@ -85,7 +86,7 @@
       /* line-height: 24px; -- Lineheight is not sematically correct on input elements, so we rely on padding */
 
       border-width: 1px;
-      border-color: #cbd5e1 border-radius: 6px;
+      border-color: #cbd5e1;
       border-style: solid;
 
       background-color: rgb(255 255 255 / 1);
