--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       font-size: 16px;
       line-height: 24px;
       border: #9ca3af 1px solid;
+      border-radius: 0;
     }
 
     #creditCardNumberInput:focus, #cvcInput:focus, #cardholderNameInput:focus {
