--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       font-weight: 500;
     }
     
-    .pensio_payment_form_label_cell>#pensio_payment_form_cvc_description {
+    #pensio_payment_form_cvc_description {
       color: #6b7280;
       font-size: 12px;
       line-height: 16px;
