--- a/index.html
+++ b/index.html
@@ -52,13 +52,32 @@
     
     #pensio_payment_form_cvc_description {
       color: #6b7280;
-      font-size: 12px;
-      line-height: 16px;
+      font-size: 14px;
+      line-height: 20px;
       font-weight: 400;
     }
 
     .pensio_payment_form_row {
       margin-top: 16px;
+    }
+
+    .pensio_payment_form_cvc_error{
+      color: #e53e3e;
+      font-size: 14px;
+      line-height: 20px;
+      font-weight: 400;
+    }
+
+    /* CVC helper icon */
+    .pensio_payment_form_cvc_cell {
+      margin-top: 8px;
+    }
+
+    /* Creditcard expiry helper labels */
+    .pensio_payment_form_row.expiry_row>label[for='emonth'],
+    .pensio_payment_form_row.expiry_row>label[for='eyear'],
+    .pensio_payment_form_label_cell_divider {
+      display: none;
     }
 
     #creditCardNumberInput, #cvcInput, #cardholderNameInput {
