--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       margin-top: 16px;
     }
 
-    .pensio_payment_form_cvc_error{
+    #invalid_cvc, #invalid_cardholdername {
       color: #e53e3e;
       font-size: 14px;
       line-height: 20px;
@@ -136,6 +136,11 @@
       border: none;
       cursor: pointer;
       text-transform: uppercase;
+    }
+
+    #pensioCreditCardPaymentSubmitButton:disabled {
+      background-color: #9ca3af;
+      cursor: not-allowed;
     }
   </style>
 </head>
