--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       display: none;
     }
 
-    #pensioCreditCardPaymentSubmitButton {
+    #pensioCreditCardPaymentSubmitButton, #dkcPaymentButton {
       width: 100%;
       max-width: 100vw;
       margin-top: 16px;
@@ -138,7 +138,7 @@
       text-transform: uppercase;
     }
 
-    #pensioCreditCardPaymentSubmitButton:disabled {
+    #pensioCreditCardPaymentSubmitButton:disabled, #dkcPaymentButton:disabled {
       background-color: #9ca3af;
       cursor: not-allowed;
     }
@@ -149,7 +149,7 @@
   <div class="MyFormContainer">
     <div class="CustomAltaPayCloseButton">Close</div>
     <form id="PensioPaymentForm">All content here will be replaced by the actual payment form</form>
-    <input type="button" class="CustomSubmitButton" value="Pay" />
+    <input id="dkcPaymentButton" type="button" value="Pay" />
   </div>
 </body>
 
