--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div class="MyFormContainer">
     <div class="CustomAltaPayCloseButton">Close</div>
     <form id="PensioPaymentForm">All content here will be replaced by the actual payment form</form>
-    <input id="dkcPaymentButton" type="button" value="Pay" />
+    <input id="dkcPaymentButton" class="CustomAltaPaySubmitButton" type="button" value="Pay" />
   </div>
 </body>
 
